fonts, styles and sidekick lib

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -2,8 +2,9 @@ version: 1
 indices:
   default:
     include:
-      - /news/*/*
-      - /press/*
+      - /news/**
+      - /press/**
+      - /editions/**
     exclude:
       - '**/fragments/**'
       - '**/templates'
