--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,12 +1,12 @@
 {
-    "project": "SAP",
+    "project": "EMIFF",
     "plugins": [
       {
         "id": "library",
         "title": "Library",
         "environments": ["edit"],
         "url": "/tools/sidekick/library.html",
-        "includePaths": ["**.docx**"]
+        "includePaths": ["*"]
       }
     ]
   }
