indexing of /festival

--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -5,6 +5,7 @@ indices:
       - /news/**
       - /press/**
       - /editions/**
+      - /festival/**
     exclude:
       - '**/fragments/**'
       - '**/templates'
