--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -1,6 +1,6 @@
 version: 1
 indices:
-  default:
+  lang-en:
     include:
       - /news/**
       - /press/**
@@ -10,6 +10,44 @@ indices:
       - '**/fragments/**'
       - '**/templates'
     target: /query-index
+    properties:
+      title:
+        select: head > meta[property="og:title"]
+        value: attribute(el, "content")
+      description:
+        select: head > meta[name="description"]
+        value: attribute(el, "content")
+      type:
+        select: head > meta[name="type"]
+        value: attribute(el, "content")
+      topics:
+        select: head > meta[name="topics"]
+        values: attribute(el, "content")
+      image:
+        select: head > meta[property="og:image"]
+        value: attribute(el, "content")
+      lastModified:
+        select: none
+        value: parseTimestamp(headers["last-modified"])
+      publicationDate:
+        select: head > meta[name="published-time"]
+        value: parseTimestamp(attribute(el, "content"))
+      template:
+        select: head > meta[name="template"]
+        value: attribute(el, "content")
+      robots:
+        select: head > meta[name="robots"]
+        value: attribute(el, "content")
+  lang-es:
+    include:
+      - /es/news/**
+      - /es/press/**
+      - /es/editions/**
+      - /es/festival/**
+    exclude:
+      - '**/fragments/**'
+      - '**/templates'
+    target: /query-index-es
     properties:
       title:
         select: head > meta[property="og:title"]
