--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -7,7 +7,7 @@ indices:
       - '/press/**'
       - '/festival/**'
     exclude:
-      - '/read-me'
+      - '/site-howto/**'
       - '/nav'
       - '/footer'
       - '/es/**'
@@ -49,7 +49,7 @@ indices:
       - '/es/press/**'
       - '/es/festival/**'
     exclude:
-      - '/read-me'
+      - '/site-howto/**'
       - '/nav'
       - '/footer'
       - '**/fragments/**'
